Fix AutoComplete alignment and height style in form item, close #5139

--- a/components/auto-complete/style/index.less
+++ b/components/auto-complete/style/index.less
@@ -8,11 +8,7 @@
 
 .@{autocomplete-prefix-cls} {
   &.@{select-prefix-cls} {
-
     .@{select-prefix-cls} {
-      &-search--inline {
-        position: relative;
-      }
       &-selection {
         border: 0;
         &--single {
@@ -21,7 +17,6 @@
         &__rendered {
           margin-left: 0;
           margin-right: 0;
-          line-height: 0;
         }
         &__placeholder {
           margin-left: 8px;
